# timidity41

./: .editorconfig  .gitignore  AUTHORS  CHANGES  CMakeLists.txt  ChangeLog  ChangeLog.1  FAQ  INSTALL  INSTALL.jp  Makefile  Makefile.am  Makefile.in  NEWS  README  README.DEC  README.W32  README.jp  README.tk  TODO  TiMidity-uj.ad  TiMidity.ad  WriteVersion.cmake  acinclude.m4  aclocal.m4  appveyor.yml  autogen.sh  bag.c  browser.tcl  build-depends-mingw-w64.sh  common.c  common.makefile  common.makefile.in  config.h  config.h.in  config_args.txt  configure  configure-help.txt  configure.in  controls.c  (+50 more)
BITMAPS/: back.xbm  fwd.xbm  next.xbm  pause.xbm  quit.xbm  restart.xbm
FLAC/: CMakeLists.txt
FLAC/src/: cpu.c  stream_decoder.c  version.rc  windows_unicode_filenames.c
FLAC/src/private/: cpu.h
FLAC/src/share/win_utf8_io/: win_utf8_io.c
autoconf/: Makefile.am  Makefile.in  opus.m4  speex.m4  utils.m4  vorbis.m4
calcnewton/: calcnewton.vcproj  calcnewton.vcxproj  calcnewton.vcxproj.filters
cfgforsf/: CMakeLists.txt  cfgforsf.dsp  cfgforsf.vcproj  cfgforsf.vcxproj  cfgforsf.vcxproj.filters
configs/: Makefile.in  msc-config.h  msc-config.h.in  msc-interface.h  msc-sjis.txt  newton_table.c  timidity_2.14.0-1.dsc
cygwin/: config.h  interface.h  version.h
debian/: changelog  control  files  rules  timidity-daemon.postinst.debhelper  timidity-daemon.postrm.debhelper  timidity-daemon.prerm  timidity-daemon.prerm.debhelper  timidity-el.postinst.debhelper  timidity-el.prerm.debhelper  timidity-interfaces-extra.install  timidity-interfaces-extra.substvars  timidity.substvars
doc/: Makefile.am  Makefile.in
gogo/: gogo.h
in_kbwrap/: in_kbwrap.vcxproj  in_kpi_wrap.cpp  in_kpi_wrap.def
in_timidity/: in_timidity.cpp  in_timidity.vcxproj
interface/: CMakeLists.txt  Makefile.am  Makefile.in  TiMidity-uj.ad  TiMidity.ad  VTPrsTbl.c  alsaseq_c.c  browser.tcl  build_escape_sjis.sh  dumb_c.c  dynamic_c.c  emacs_c.c  gtk_c.c  gtk_h.h  gtk_i.c  gtk_p.c  interface.cbp  interface.dsp  interface.vcproj  interface.vcxproj  interface.vcxproj.filters  mac_c.c  mac_c.h  mac_mag.c  mac_mag.h  mac_trace.c  mac_wrdwindow.c  mac_wrdwindow.h  misc.tcl  motif.h  motif_c.c  motif_i.c  motif_p.c  ncurs_c.c  npsyn_c.c  portmidisyn_c.c  resource.h  rtsyn.h  rtsyn_common.c  rtsyn_internal.h  (+83 more)
interface/bitmaps/: Makefile.am  Makefile.in
interface/motif_bitmaps/: Makefile.am  Makefile.in  prev.xbm
interface/pixmaps/: Makefile.am  Makefile.in
kbtim/: _timidity_.c  kbstr.cpp  kbstr.h  kbtim.dsw  kbtim.h  kbtim.opt  kbtim.sln  kbtim.txt  kbtim_common.h  kbtim_config.h  kbtim_dll.cpp  kbtim_dll.def  kbtim_dll.dsp  kbtim_dll.vcproj  kbtim_dll.vcxproj  kbtim_dll.vcxproj.filters  kbtim_globals.c  kbtim_installer.cpp  kbtim_installer.dsp  kbtim_installer.vcproj  kbtim_installer.vcxproj  kbtim_installer.vcxproj.filters  kbtim_interface.h  kbtim_kpi.cpp  kbtim_kpi.def  kbtim_kpi.dsp  kbtim_kpi.vcproj  kbtim_kpi.vcxproj  kbtim_kpi.vcxproj.filters  kbtim_main.cpp  kbtim_memo.txt  kbtim_setting.cpp  kbtim_setting.h  ringbuf.cpp  ringbuf.h
kbtimsetup/: kbtimsetup.c  kbtimsetup.vcproj  kbtimsetup.vcxproj  kbtimsetup.vcxproj.filters
lame/: CMakeLists.txt  config.h
lame/Dll/: BladeMP3EncDLL.c  BladeMP3EncDLL.def
lame/include/: lame.def
lame/libmp3lame/: VbrTag.c
lame/libmp3lame/vector/: xmm_quantize_sub.c
libarc/: CMakeLists.txt  Makefile.am  Makefile.in  arc.c  arc.h  arc_dir.c  arc_lzh.c  arc_mime.c  arc_newsgroup.c  arc_tar.c  arc_zip.c  deflate.c  explode.c  explode.h  inflate.c  libarc.cbp  libarc.dsp  libarc.plg  libarc.vcproj  libarc.vcxproj  libarc.vcxproj.filters  unlzh.c  unlzh.h  url.c  url.h  url_b64decode.c  url_buff.c  url_cache.c  url_constmem.c  url_dir.c  url_file.c  url_ftp.c  url_hqxdecode.c  url_http.c  url_inflate.c  url_mem.c  url_news.c  url_newsgroup.c  url_pipe.c  url_qsdecode.c  (+2 more)
libmpg123/: CMakeLists.txt  libmpg123.vcproj  libmpg123.vcxproj
libmpg123/include/: mpg123.h
libmpg123/src/: config.h
libmpg123/src/libmpg123/: frame.c  mpg123.h.in  optimize.c
libunimod/: CMakeLists.txt  Makefile.am  Makefile.in  (+18 more)
pdcurses/: CMakeLists.txt  pdcurses.def  pdcurses.vcproj  pdcurses.vcxproj  pdcurses.vcxproj.filters
pdcurses/win32/: pdcwin.h
portaudio/: CMakeLists.txt  portaudio.def
portaudio/src/hostapi/dsound/: pa_win_ds.c  pa_win_ds_dynlink.h
portaudio/src/hostapi/wasapi/: pa_win_wasapi.c
portaudio/src/hostapi/wdmks/: pa_win_wdmks.c
portaudio/src/os/win/: pa_x86_plain_converters.c
portmidi/: CMakeLists.txt  portmidi.vcproj  portmidi.vcxproj  portmidi.vcxproj.filters
portmidi/pm_win/: pmwinmm.c
portmidi/porttime/: ptwinmm.c
sf_view_gui/: CMakeLists.txt  OpenDlg.cpp  OpenDlg.h  mysndfont.c  resource.h  sfview_dlg.rc  sfview_main.cpp
speex/: CMakeLists.txt  config.h  libspeex.def  libspeex.vcproj  libspeex.vcxproj  libspeex.vcxproj.filters  os_support.h  speex.h  speex.vcproj  speex_config_types.h
timidity/: CMakeLists.txt  LameEnc.h  Makefile  Makefile.am  Makefile.in  aRts_a.c  aenc.h  aiff_a.c  alsa_a.c  ao_a.c  aq.c  aq.h  au_a.c  audio_cnv.c  audio_cnv.h  audriv.h  audriv_a.c  audriv_al.c  audriv_mme.c  audriv_none.c  audriv_sun.c  benchmark_a.c  bsd20_a.c  calcnewt.c  common.c  common.h  controls.c  controls.h  darwin_a.c  decode.c  decode.h  dl_cygwin32.c  dl_dld.c  dl_dlopen.c  dl_hpux.c  dl_w32.c  dls.cpp  dls.h  dlutils.h  ecw.cpp  (+150 more)
twsyn_bridge/: CMakeLists.txt  twsyn_bridge.vcproj  twsyn_bridge.vcxproj  twsyn_bridge_common.h  twsyn_bridge_exe.c  twsyn_bridge_exe.rc  twsyn_bridge_exe_res.h  twsyn_bridge_host.c  twsyn_bridge_host.h
utils/: CMakeLists.txt  Makefile.am  Makefile.in  bitset.c  bitset.h  fft.c  fft.h  fft4g.c  fft4g.h  getaddrinfo.c  getopt.c  mac_readdir.c  mac_readdir.h  mac_util.c  mac_util.h  mblock.c  mblock.h  memb.c  memb.h  net.c  net.h  nkflib.c  nkflib.h  readdir.h  readdir_win.c  strtab.c  strtab.h  support.c  support.h  timer.c  timer.h  tmdy_getopt.h  utils.dsp  utils.vcproj  utils.vcxproj  utils.vcxproj.filters
vorbis/: CMakeLists.txt  codec.h
vorbis/win32/: vorbis.def  vorbisenc.def  vorbisfile.def
(+96 files in other folders)
